<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to read stories from dicoding students?</string>
    <string name="title_welcome_page">Welcome to Dicoding Story App!</string>
    <string name="title_signup_page">Please complete your personal data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to read the story</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Reading</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="thumbnail">thumbnail</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="description">description</string>
    <string name="no_available_data">No Available Data</string>
    <string name="retry">Try again</string>
    <string name="give_current_location">Give current location</string>
</resources>